--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Random Quote</title>
-    <link rel="shortcut icon" href="images/quote-right.svg" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="images/quote-right.svg"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/main.css" />
   </head>
@@ -14,14 +18,23 @@
     >
       <div class="quote text-center bg-white p-4 rounded w-100 shadow">
         <h1 class="fw-bold head">Quote Generator</h1>
-        <h2 class="fs-4 pt-2">Press the button below to recieve a random quote!</h2>
-        <div class="py-5 fs-5 lead fs-3 m-auto px-3" id="quote">Loading ...</div>
-        <h3 class="text-end fs-5 px-3 lead fs-3 ms-auto" id="authorName">Loading ...</h3>
-        <button class="btn px-4 border-1 btn-outline-primary shadow-lg" id="button">
+        <h2 class="fs-4 pt-2">
+          Press the button below to recieve a random quote!
+        </h2>
+        <div class="py-5 fs-5 lead fs-3 m-auto px-3" id="quote">
+          Loading ...
+        </div>
+        <h3 class="text-end fs-5 px-3 lead fs-3 ms-auto" id="authorName">
+          Loading ...
+        </h3>
+        <button
+          class="btn px-4 border-1 btn-outline-primary shadow-lg"
+          id="button"
+        >
           New Quote
         </button>
       </div>
     </div>
-    <script src="js/main.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
