--- a/index.html
+++ b/index.html
@@ -27,10 +27,7 @@
         <h3 class="text-end fs-5 px-3 lead fs-3 ms-auto" id="authorName">
           Loading ...
         </h3>
-        <button
-          class="btn px-4 border-1 btn-outline-primary shadow-lg"
-          id="button"
-        >
+        <button class="btn px-4 border-1 shadow-lg" id="button">
           New Quote
         </button>
       </div>
